bin/tests/errors_lexer/lexer/lex_err_invalid_hex_digit.swg
#global fileprivate

'\xG' // swc-expected-error {{lex_err_invalid_hex_digit}}
